fixed the issues with work sample images overlapping at smaller screen widths

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -53,20 +53,22 @@ header h1{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    padding: 10px;
 }
 
 .about-me img{
     height: 200px;
-    width: auto;
+    width: 150px;
+    border-radius: 50%;
+    margin: 5px;
 }
 
 .work-samples{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 5px;
-    align-items: center;
     text-align: center;
+    padding: 5px;
 }
 
 .work-samples-img{
@@ -76,10 +78,11 @@ header h1{
 }
 
 .project2{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
+    padding: 5px;
+    height: auto;
     width: 50%;
 }
 
@@ -103,7 +106,12 @@ footer{
 }
 
 @media screen and (max-width: 992px) {
-    
+    .project2{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -115,6 +123,14 @@ footer{
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+    }
+    .project2{
+        flex-direction: row;
+        justify-content: center;
+        text-align: center;
+        padding: 5px;
+        height: auto;
+        width: 100%;
     }
 }
 
